--- a/client/app/views/ballotinitiation.html
+++ b/client/app/views/ballotinitiation.html
@@ -6,16 +6,17 @@
       <div class="container-fluid">
         <img src="./images/ballotize.png" margin-: -4px class="center-block img-responsive" alt="image">
         <h1 style="font-family:Brush Script MT; margin: 0; padding: 0; border: 0; color:blue;text-align:center; font-size: 50px;color:#003399; text-padding: 0">Ballotize</h1>
-        <p style ="font-family:Tw Cen MT; font-size: 18px; color: black" align="center">Instant voting on anything</p>
+        <p style ="font-family:Tw Cen MT; font-size: 18px; color: black" align="center">Instantly voting on anything</p>
       </div>
     </div>
-    
+
     <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+    <h1 align="center">Join a Ballot</h1>
     <form id="loginform" class="form-horizontal" role="form">
 
       <div style="margin-bottom: 25px" class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-        <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username (optional)" ng-value="userGivenUserName" ng-model="userGivenUserName">
+        <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Name (optional)" ng-value="userGivenUserName" ng-model="userGivenUserName">
       </div>
 
       <div style="margin-bottom: 25px" class="input-group">
@@ -36,9 +37,10 @@
         background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); ">
 
       <br>
+        <h1 align="center">Create a Ballot</h1>
         <div style="margin-bottom: 25px" class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-          <input id="login-username" type="text" class="form-control" ng-value="newInitiator" placeholder="username (optional)" ng-model="newInitiator">
+          <input id="login-username" type="text" class="form-control" ng-value="newInitiator" placeholder="Name (optional)" ng-model="newInitiator">
         </div>
 
         <div class="span2 text-center">
